2005-04-08  William Jon McCann  <mccann@jhu.edu>

	* src/dialog.cpp (get_insurance_choice, show_hint_dialog):
	Use a blank title in alerts per HIG.

2005-04-07  William Jon McCann  <mccann@jhu.edu>

	* src/player.cpp (showCount): 
	* src/hand.cpp (bj_hand_events_pending, bj_hand_cancel) 
	(bj_hand_new5, bj_hand_new, bj_hand_finish1, bj_hand_finish) 
	(bj_hand_stand, bj_hand_hit, bj_hand_hit_delay_cb) 
	(bj_hand_hit_with_delay, bj_hand_double, bj_hand_split) 
	(bj_hand_surrender, bj_hand_new_deal): 
	* src/events.cpp (bj_event_key_press, bj_event_button_press): 
	* src/blackjack.cpp:
	Add a new function to keep track of pending events.  Remove
	broken global variable events_pending.  Add guards in public
	bj_hand functions for when events are pending.  Fixes #170625.

	* *.[ch]: Remove unneeded includes.

2005-03-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* src/dialog.cpp: 	
	* src/blackjack.cpp: Patches from Dennis Cranston
	<dennis_cranston@yahoo.com> to make the game more HIG
	compliant.

2005-02-27  Richard Hoelscher  <rah@rahga.com>

	* src/blackjack.cpp (main): Set default icon from file, for now.

2005-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* blackjack.cpp: Patch from Nickolay V. Shmyrev to get blackjack
	correctly translated. See bug #167175.

2005-01-29  Richard Hoelscher  <rah@rahga.com>

	* src/blackjack.cpp: Mark menu items for translation.

2005-01-03  Richard Hoelscher  <rah@rahga.com>

	* src/slot.cpp (bj_slot_set_size): 
	* src/chips.cpp (bj_chip_set_size): Preimage API update, uri -> file. 

2004-11-29  Richard Hoelscher  <rah@rahga.com>

	* src/blackjack.cpp (main): remove rsvg_init(), bug #159811.

2004-11-12  William Jon McCann  <mccann@jhu.edu>

	* src/press_data.cpp (bj_press_data_free)
	(bj_chip_stack_press_data_free): New functions.

	* src/game.cpp (bj_game_cancel): 
	* src/events.cpp (drop_moving_cards, drop_moving_chips)
	(bj_event_button_release):
	Free the press data when the game ends.  Fixes #138469.
